# sonnet-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  LLMS.md  README.md  flake.nix  fourmolu.yaml  justfile  package.yaml  pre.scm  result  run.scm  sonnet-haskell.cabal  sonnet.typ  stack.yaml  syntax.md  test.st  test2.st
app/: Main.hs
c-in-scala/: .scalafmt.conf  build.mill  driver.rs  justfile  runhandler.janet  test2.lang
ginko/: common.janet  ginko-runtime.c  ginkoc.janet  run-tests.janet  run.janet  run_tests.janet  test.gko
hooks/: prepare-commit-msg
lambda-rank2/: Main.hs  Parser.hs  Syntax.hs  Typer.hs
licenses/: mit-license.md
mylang/: .gitignore  aurora_config.toml  build.mill  driver.rs  runtime.c  test.lang  test2.lang
samples/: fib.hk  hello_world.hk
sonnet/: .clang-format  pre_commit.scm  test.st
sonnet-bs/: .gitignore  build.mill  driver.rs  goldentests.toml  justfile  proto.lang  run_handler.sh  runhandler.janet  runtime.c  test.lang  test2.lang
sonnet-java/: justfile  makefile  settings.gradle.kts  syntax.md  test.st  test2.st
sonnet-scala/: build.mill  build.mill.yaml  justfile  mini.st  test.st
spec/: abstract.typ  concrete.typ  definitions.typ  introduction.typ  main.typ  refs.bib  semantics.typ  spec_template.typ  syntax.typ
src/: Builtins.hs  ConcreteSyntax.hs  Eval.hs  Helpers.hs  Lib.hs  Parser.hs  SimpleType.hs  Simplify.hs  Specialise.hs  Syntax.hs  Typer.hs  TyperHelpers.hs  ast.rs  gen_names.rs  haiku.mlb  lexer.rs  lexer.sml  llvm_codegen.rs  main.rs  main.sml  parser.rs  parser.sml  stdlib.rs  tac.rs  typer.rs  (+1 more)
(+197 files in other folders)
