[package]
name = "haiku"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.49.0", features = ["full", "io-std"] }
tower-lsp = "0.20.0"

[dev-dependencies]
tabled = "0.20.0"

[build-dependencies]
time = "0.3"
